# music-composer-ai-agent-with-adk

./: .env.example  .gitignore  .gitmodules  README.md  __init__.py  agent.py  pyproject.toml  run-adk-web.sh
agents/coordinador_audio/: __init__.py  agent.py  config.py  instructions.py  intent_state.py
agents/coordinador_audio/prompt_templates/: __init__.py  store.py
agents/coordinador_audio/prompt_templates/examples/: ambient_rain.txt  funk-minimal-moderno.txt  twin-peaks-vibe-electronica.txt  zamba-folklor-argentino.txt
agents/coordinador_audio/subagents/: __init__.py  audio_processor.py  compositor.py  folclore_argentino.py  musica_concreta.py  overdub_agent.py  prompt_builder.py  remix_agent.py
coordinador_audio/: __init__.py  agent.py
docs/: AGENTS.md  TOOLS.md  swaming-agents-redpanal.excalidraw
local-ddsp/: .gitignore  README.md  batch_process.py  download_models.py  requirements.txt  test_local.py  timbre_transfer.py
mcp/ddsp-mcp-server/: mcp_ddsp.py  pyproject.toml
mcp/ffmpeg-mcp-server/: mcp_ffmpeg.py  pyproject.toml
mcp/sox-mcp-server/: mcp_sox.py  pyproject.toml
modal-ddsp/: .env.example  FORCE_REBUILD.md  QUALITY_GUIDE.md  README.md  api_server.py  debug_model.py  download_models.py  mcp_bridge.py  modal_app.py  process_904.py  process_904_demo.py  process_904_final.py  process_904_quality.py  quick_test.sh  send_15s.py  send_to_modal.py  test_deployed.py  test_full.py  test_local.py  test_minimal.py  test_simple.py  test_transfer.py
scripts/: run-web.sh  setup-mcp.sh
