[project]
name = "mcp-ddsp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.8.1",
    "ddsp>=3.6.0",
    "tensorflow>=2.10.0",
    "tensorflow-probability>=0.18.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "librosa>=0.9.0",
    "soundfile>=0.11.0",
    "gin-config>=0.5.0",
]

[tool.uv]
exclude-newer = "2026-01-01T00:00:00Z"
